<resources>
    <string name="app_name">DRIVE IT</string>
    <string name="drive_it">DRIVE IT</string>
    <string name="sign_in" formatted="true" translatable="true">היכנס</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="name">שולי לוי</string>
    <string name="city">טבריה</string>
    <string name="teacher">לומדת אצל: אבי כהן</string>
    <string name="time">טיימרים</string>
    <string name="calendar">לוח חודשי</string>
    <string name="lessons">קביעת שיעורים</string>
    <string name="ketzev">קצב התקדמות</string>
    <string name="personal_profile">פרופיל אישי</string>
    <string name="teacher_profile">פרופיל מורה</string>
    <string name="keepmoving">אל תפסיק להשתפר</string>
    <string name="keep_moving">אל תפסיק להשתפר!</string>
    <string name="zehirut">זהירות בכביש</string>
    <string name="parking">חניות</string>
    <string name="hiluchim">שליטה בהילוכים</string>
    <string name="hitkadmut">התקדמות כללית</string>
    <string name="masachhabait">בית</string>
    <string name="always_keep_moving">always keep moving</string>
    <string name="ketzev_">קצב ההתקדמות</string>
    <string name="durag">דורג על ידי אבי כהן</string>
    <string name="studentsrating">דירוג תלמידים</string>
    <string name="studentsname">שם התלמיד: אבי שמעוני</string>
    <string name="home">בית</string>
    <string name="shlita">שליטה בהילוכים</string>
    <string name="save">שמור</string>
    <string name="fullname">שם מלא</string>
    <string name="phonenumber">מספר טלפון</string>
    <string name="mailadress">כתובת מייל</string>
    <string name="studyarea">איזור לימוד</string>
    <string name="city1">יישוב</string>
    <string name="manualorautomatic">ידני או אוטומט</string>
    <string name="passwordagain">אימות סיסמה</string>
    <string name="finish">סיימתי:)</string>
    <string name="school">בית ספר</string>
    <string name="studyarea1">איזור שיעור</string>
    <string name="manualorautomatic1">ידני/אוטומט/שניהם</string>
    <string name="lessonlenght">אורך שיעור</string>
    <string name="priceperlesson">מחיר לשיעור</string>
    <string name="bio">קצת על עצמי</string>
    <string name="password1">סיסמא</string>
    <string name="personalprofile">פרופיל אישי</string>
    <string name="teacher1">מורה:</string>
    <string name="Control">שליטה בהילוכים</string>
    <string name="progress">התקדמות כללית</string>
    <string name="caution">זהירות</string>
    <string name="cshool">בית ספר:</string>
    <string name="school1">בית ספר:</string>
    <string name="name1">שם:</string>
    <string name="city2">עיר:</string>
    <string name="progress1">קצב התקדמות</string>
    <string name="ratingby">דורג על ידי: אבי כהן</string>
    <string name="progress2">התקדמות כללית</string>
    <string name="control">שליטה בהילוכים</string>
    <string name="caution1">זהירות בכביש</string>
    <string name="availablelessonstoday">שיעורים פנויים היום</string>
    <string name="waitingfortest">מחכים לטסט:</string>
    <string name="studentsnumber">מספר תלמידים כרגע:</string>
    <string name="rating">דרג</string>
    <string name="teachersname">שם המורה</string>
    <string name="דביםםך">בית ספר:</string>
    <string name="eacher">לומדים אצל:</string>
    <string name="city3">עיר</string>
    <string name="teachername">לומדת אצל</string>
    <string name="essontcounting">שיעור מספר</string>
    <string name="lessonscounting">שיעור מספר</string>
    <string name="smalltest">טסט פנימי</string>
    <string name="studentprofile">פרופיל תלמיד</string>
    <string name="teacher3">לומדת אצל:</string>
    <string name="always_keep_movong">always keep movong!!</string>
    <string name="necessaryinfo">המידע הנחוץ עבורך</string>
    <string name="whoweare">מי אנחנו?</string>
    <string name="whatinneeded">מה צריך בשביל להתחיל ללמוד נהיגה?</string>
    <string name="greenform">איך מוציאים טופס ירוק?</string>
    <string name="whentotakeatest">תוך כמה זמן אפשר לגשת לטסט?</string>
    <string name="how_test">איך ניגשים לטסט?</string>
    <string name="averagelessons">מה ממוצע השיעורים להגשה לטסט?</string>
    <string name="howcost">כמה עולה תהליך הוצאת הרישיון?</string>
    <string name="howtodealwithstress">איך להתמודד עם לחץ לפני טסט?</string>
    <string name="importantthingstoknow">דברים שחשוב לדעת לפני שמתחילים:</string>
    <string name="imfortantthingsbeforeyoourtest">דברים שחשוב לדעת לפני שניגשים לטסט:</string>
    <string name="signin">היכנס</string>
    <string name="scheduling">קביעת שיעורים</string>
    <string name="phonenum">מספר פלאפון</string>
    <string name="fullname">שם מלא</string>
    <string name="mailadress">כתובת מייל</string>
    <string name="studyarea">איזור לימוד</string>
    <string name="yourcity">עיר</string>
    <string name="manualoraoutomatic">ידני/ אוטומט</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="passwordagain">אימות סיסמה</string>
    <string name="studentsrightnow">60 תלמידים כעת</string>
    <string name="rating">דרג</string>
    <string name="studentname">שם התלמיד</string>
    <string name="availablelessons">שיעור פנויים היום:</string>
</resources>