<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carsbackground"
    android:orientation="vertical"
    tools:context=".RatingActivity_S">

    <Button
        android:id="@+id/btnhome"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:drawableBottom="@drawable/house" />

    <TextView
        android:id="@+id/txtprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/progress1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textteacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/ratingby"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnprogress"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC3hg"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/progress2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/btncontrol"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC3hg"
        android:text="@string/control"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnparking"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC3hg"
        android:text="@string/parking"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
       />

    <Button
        android:id="@+id/btnacution"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC3hg"
        android:text="@string/caution1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/txtquote"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFDFBFB"
        android:text="@string/always_keep_movong"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:iconTint="#FDFBFB"
        android:textSize="40sp"/>


</LinearLayout>