<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/halell"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/ketzev_"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp"
        android:visibility="visible" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/durag"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible" />

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="146dp" />



    <TableRow>

    </TableRow>


    <Button

        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_gravity="right"
        android:layout_marginTop="-290dp"
        android:backgroundTint="#00CDDC39"
        android:text="@string/masachhabait"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />




    <Button

        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="135dp"
        android:backgroundTint="#00CDDC39"
        android:hint="@string/hitkadmut"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <Button

        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC39"
        android:hint="@string/hiluchim"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <Button

        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC39"
        android:hint="@string/parking"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <Button

        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00CDDC39"
        android:hint="@string/zehirut"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />


    <TextView

        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="104dp"
        android:backgroundTint="#00CDDC39"
        android:text="@string/always_keep_moving"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:iconTint="@color/teal_700"
        app:strokeColor="#131313"
        android:textSize="30sp"/>


</LinearLayout>