<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carsbackground"
    android:orientation="vertical"
    tools:context=".RatingActivity_S">

    <Button
        android:id="@+id/btnhome"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:drawableBottom="@drawable/house" />

    <TextView
        android:id="@+id/txtprogress1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/progress1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textteacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/ratingby"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible" />


    <TextView
        android:id="@+id/txtprogress"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:background="#318E24AA"
        android:backgroundTint="#00CDDC39"
        android:text="@string/progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <TextView
        android:id="@+id/txtcontrol"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#318E24AA"
        android:backgroundTint="#00CDDC39"
        android:text="@string/Control"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <TextView
        android:id="@+id/txtparking"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#318E24AA"
        android:backgroundTint="#00CDDC39"
        android:text="@string/parking"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <TextView
        android:id="@+id/txtcaution"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="168dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#318E24AA"
        android:backgroundTint="#00CDDC39"
        android:text="@string/caution"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

    <TextView
        android:id="@+id/txtquote"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFDFBFB"
        android:text="@string/always_keep_movong"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:iconTint="#FDFBFB"
        android:textSize="40sp"/>


</LinearLayout>