<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drivedots"
    android:orientation="vertical">


    <EditText
        android:id="@+id/btnname"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/fullname"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />

    <EditText
        android:id="@+id/btnphonenumber"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/phonenum"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />


    <EditText
        android:id="@+id/btnmailadress"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/mailadress"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />

    <EditText
        android:id="@+id/btnstudyarea"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/studyarea"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />

    <EditText
        android:id="@+id/btncity"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/yourcity"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />
    <EditText
        android:id="@+id/btnmanualorautomatic"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/manualoraoutomatic"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />

    <EditText
        android:id="@+id/btnusername"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/username"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />


    <EditText
        android:id="@+id/btnpassword"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/password"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />

    <EditText
        android:id="@+id/btnpasswordagain"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#08FFFFFF"
        android:backgroundTint="#000B0A0B"
        android:drawableTint="#32013A"
        android:hint="@string/passwordagain"
        android:rotationX="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#000B0A0A"
        app:strokeColor="#08131313" />

    <Button
        android:id="@+id/btnfinish2"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#00CDDC39"
        android:text="@string/finish"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:iconTint="#0B0A0A"
        app:strokeColor="#131313" />

</LinearLayout>





