<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
<TableRow android:layout_width="358dp">

    <TextView
        android:id="@+id/txtstudentsprodfile"
        android:layout_width="241dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/studentprofile"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp"
        android:visibility="visible" />
</TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnname"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="#00CDDC39"
            android:text="@string/name1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:iconTint="#0B0A0A"
            app:strokeColor="#131313" />


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btncity"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#00CDDC39"
            android:text="@string/city3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:iconTint="#0B0A0A"
            app:strokeColor="#131313" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/driveit_three"
            android:text="a" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnteacher"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:backgroundTint="#00CDDC39"
            android:text="@string/teacher3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:iconTint="#0B0A0A"
            app:strokeColor="#131313" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnschool"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:backgroundTint="#00CDDC39"
            android:text="בית ספר"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:iconTint="#0B0A0A"
            app:strokeColor="#131313" />
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnlessonscounting3"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_button"
            android:text="טסט פנימי"
            android:textSize="15sp"
            app:strokeColor="#131313" />


        <TextView
            android:id="@+id/btnlessonscounting2"
            android:layout_width="129dp"
            android:layout_weight="1"
            android:layout_height="129dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_button"
            android:text="טסט פנימי"
            android:textSize="15sp"
            app:strokeColor="#131313" />

        <TextView
            android:id="@+id/btnlessonscounting1"
            android:layout_width="129dp"
            android:layout_weight="1"
            android:layout_height="129dp"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_button"
            android:text="שיעור מספר"
            android:textSize="15sp"
            app:strokeColor="#131313" />
    </TableRow>
        <TableRow android:layout_height="75dp">

            <Button
                android:id="@+id/btntimers"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/btncalendar"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btnscheduling"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btnprogress"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </TableRow>



   </TableLayout>
</LinearLayout>

